fixed spacing in CSS

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ button:hover {
 
 #quoteSection {
     gap: 1rem;
-    padding: 1rem 10rem 3rem;
+    padding: 3rem 10rem 3rem;
     max-width: 900px;
 }
 
